Add Google font and HTML comms

--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    
+    <!-- Page title -->
     <title>Calculator</title>
 </head>
 <body>
+    <!-- Calculator container -->
     <div class="calculator-grid">
+
+        <!-- Output container with display operands-->
         <div class="output">
             <div class="previous-operand"></div>
             <div class="current-operand"></div>
         </div>
+
+        <!-- Calculator buttons -->
         <button class="span-two">AC</button>
         <button>DEL</button>
         <button>÷</button>
