Style calculator grid and buttons. Add comms to CSS

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         <!-- Output container with display operands-->
         <div class="output">
-            <div class="previous-operand"></div>
-            <div class="current-operand"></div>
+            <div class="previous-operand">123 +</div>
+            <div class="current-operand">465</div>
         </div>
 
         <!-- Calculator buttons -->
