--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Output container with display operands-->
         <div class="output">
             <div data-previous-operand class="previous-operand"></div>
-            <div data-previous-operand class="current-operand"></div>
+            <div data-current-operand class="current-operand"></div>
         </div>
 
         <!-- Calculator buttons -->
