Add % button to HTML and event listener and function operation to JS

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
     <!-- Page title -->
     <title>Calculator</title>
 </head>
+
 <body>
     <!-- Calculator container -->
     <div class="calculator-grid">
@@ -21,8 +23,9 @@
         </div>
 
         <!-- Calculator buttons -->
-        <button data-all-clear class="span-two">AC</button>
+        <button data-all-clear>AC</button>
         <button data-delete>DEL</button>
+        <button data-percentage>%</button>
         <button data-operation>÷</button>
         <button data-number>1</button>
         <button data-number>2</button>
@@ -42,4 +45,5 @@
     </div>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
