--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico'>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
     <!-- Page title -->
     <title>Calculator</title>
@@ -28,7 +29,7 @@
 
         <!-- Calculator buttons -->
         <button data-all-clear>AC</button>
-        <button data-delete>DEL</button>
+        <button data-delete><span class="material-symbols-outlined">backspace</span></button>
         <button data-percentage>%</button>
         <button data-operation>÷</button>
         <button data-number>1</button>
