Edit ReadMe file and Javascript comms

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 </head>
 
 <body>
+    
+    <!-- Logo and title -->
     <h1 class="heading">
         <img class="logo" src="assets/images/logo.png" alt="logo">Calculator
     </h1>
+
     <!-- Calculator container -->
     <div class="calculator-grid">
 
